# SpikeLab

./: SpikeDataSidekick_plan.md  environment.yml  experiment_plan_template.md  pyproject.toml
.claude/skills/ephys/: SKILL.md
.claude/skills/experiment-status/: SKILL.md
.claude/skills/ntp-check/: SKILL.md
.claude/skills/orchestrator/: SKILL.md
.github/workflows/: release.yml  tests.yml
analysis_scripts/: convert_6OHDA_to_spikedata.py  convert_immediate_to_spikedata.py  merge_duplicates_6OHDA.py  raster_22187f_D37.py  raster_2310i_D40_compare.py  raster_2310i_progression.py  raster_2310i_sch_halo.py  raster_23125h_progression.py  raster_23126h_progression.py  raster_2312i_control.py  raster_2312i_progression.py  raster_2312i_sch_halo.py  raster_23137f_D33_D41_timeline.py  raster_23137f_D36_halo30min.py  raster_23137f_D36_halo30min_full.py  raster_23137f_halo.py  raster_23137f_progression.py  raster_23178c_progression.py  raster_23206i_D40_control.py  raster_23206i_control.py  raster_23206i_sch_halo.py  raster_23215h_23125h_combined.py  raster_24448_D42_D47_timeline.py  raster_24500f_progression_rerun.py  raster_25159c_progression.py  raster_25168c_progression.py  raster_ConstraintExp4_progression.py  raster_H9SynGFP_23137f_D33_D38_timeline.py  raster_H9SynGFP_23198f_23206f_23215f.py  raster_H9SynGFP_all_MEAs_timeline.py  raster_H9SynGFP_dopamine_10min.py  raster_H9SynGFP_dopamine_progression.py  raster_KOLF21J_2310i_2312i_23206i_control_timeline.py  raster_haloperidol_progression.py  raster_progression.py  sort_2280G_D38_D39_batch.py  sort_2280G_D40_baseline.py  sort_23126h_rotenone.py  sort_24500f_D37_local.py  sort_24658h_D34_halo.py  (+3 more)
analysis_scripts/analysis/200123_2953/: burst_aligned_analysis.py  load_data.py  plot_d0_raster.py  plot_network_metrics.py  (+1 more)
docker/kilosort2_as/: Dockerfile
docs/source/: culture_lifecycle_reference.md  ephys_manifest_spec.md  ephys_todo.md  experiment_history.md  orchestrator_plan.md
examples/: maxwell_response_analysis.py
experiments/: 00_impedance_scan.py  01_activity_scan.py  02_select_electrodes.py  03_record.py  check_stim_compatibility.py  hco_stim_demo.py  hub_stim.py  maximize_stim_electrodes.py  plot_impedance_map.py  route_max_stim.py  run_all.py  select_hub_electrodes.py
scripts/: build_base_image.sh  check_plan_busy.sh  compare_sort_results_well001.py  run_all_validations.sh  run_kilosort2_docker.py  run_kilosort2_docker.sh  run_parallel_sort_well001.py  run_sort_recording_docker.py  run_validation_ks2_docker.py  run_validation_ks4.py  run_validation_ks4_docker.py  schedule_wakeup.sh  sort_gpu0_well001.py  sort_gpu1_well001.py  sort_maxtwo_concat_baseline_halo.py
scripts/guard_tests/: _canary_worker_for_kill_test.py  _io_stall_process_worker.py  _io_stall_worker.py  _ram_eater_worker.py  _ram_watchdog_worker.py  _vram_eater_worker.py  test_guard_canary_catches_failure.py  test_guard_concurrent_sort_lock.py  test_guard_crash_recovery.py  test_guard_gpu_watchdog_real_pressure.py  test_guard_inactivity_kills_real_subprocess.py  test_guard_inactivity_watchdog.py  test_guard_io_stall_process_mode.py  test_guard_io_stall_real_pressure.py  test_guard_oom_retry_scaling.py  test_guard_preflight_inversions.py  test_guard_ram_watchdog_kills_process.py  test_guard_ram_watchdog_real_pressure.py  test_guard_watchdog_priority.py
submitter/: README.md  requirements.txt  submit.py
submitter/config/: sorting_job_info.json  splitter_config.json
submitter/ephys_submit/: job_utils.py  kube.py  s3.py  splitter_fanout.py
tests/: test_batch_jobs.py  test_canary.py  test_classified_errors.py  test_curation.py  test_dataexporters.py  test_dataloaders.py  test_decoding.py  test_guards.py  test_hippie_adapter.py  test_mcp_server.py  test_numba_utils.py  test_pairwise.py  test_plot_utils.py  test_preflight.py  test_ratedata.py  test_rateslicestack.py  test_safeguards_v2.py  test_sorting_report.py  test_spike_sorting.py  test_spikedata.py  test_spikeslicestack.py  test_stat_utils.py  test_stim_sorting.py  test_utils.py  test_waveform_extractor_streaming.py  test_workspace.py
to_promote/: README.md
to_promote/tier1/: build_candidate_pool.py  burst_phase_analysis_full_sort.py  compare_multiunit_waveform_features.py  cross_cycle_fatigue.py  lag_fine_and_multivar.py  response_vs_dt_analysis.py
to_promote/tier2/: compare_intrinsic_features.py  compute_drift_metrics.py  cycle_analysis.py  score_v2_continuous.py  stable_responder_analysis.py
to_promote/tier3/: build_stim_config.py  verify_stim_configs.py
(+103 files in other folders)
