[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spikelab"
version = "0.1.1"
description = "Python library for agentic spike train analysis of neural electrophysiology data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  { name = "Tjitse van der Molen" },
  { name = "Braingeneers" },
  { name = "SpikeLab Maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
  "neuroscience",
  "electrophysiology",
  "spike-train",
  "multi-electrode-array",
  "MEA",
  "spike-sorting",
  "neural-data",
  "kilosort",
  "MCP",
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.5",
  "matplotlib>=3.5",
  "h5py>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/braingeneers/SpikeLab"
Documentation = "https://spikelab.braingeneers.gi.ucsc.edu/"
Repository = "https://github.com/braingeneers/SpikeLab"
Issues = "https://github.com/braingeneers/SpikeLab/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spikelab*"]

[tool.setuptools.package-data]
spikelab = ["agent/skills/**/*", "batch_jobs/profiles/*.yaml", "batch_jobs/templates/*.j2"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "black==26.3.1",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.25",
]
io = [
  "pandas>=1.3",
]
mcp = [
  "mcp>=0.9.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]
sse = [
  "uvicorn>=0.20",
  "starlette>=0.27",
]
s3 = [
  "boto3>=1.28.0",
]
gplvm = [
  # poor-man-gplvm is not on PyPI; install manually:
  #   pip install git+https://github.com/samdeoxys1/poor-man-GPLVM.git
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "jaxopt>=0.8.2",
  "optax>=0.2.2",
]
ml = [
  "scikit-learn>=1.0",
  "umap-learn>=0.5.0",
  "networkx>=2.6",
  "python-louvain>=0.16",
]
neo = [
  "neo>=0.12.0",
  "quantities>=0.14.0",
  "pynwb>=2.0.0",
]
numba = [
  "numba>=0.56",
]
spike-sorting = [
  "spikeinterface>=0.104.0",
  "natsort>=8.0",
  "six>=1.16",
  "pandas>=1.3",
]
batch-jobs = [
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "Jinja2>=3.1.0",
  "kubernetes>=30.1.0",
]
kilosort4 = [
  "kilosort>=4.0",
  # PyTorch with CUDA must be installed separately — see:
  # https://pytorch.org/get-started/locally/
]
ibl = [
  # brainwidemap is not on PyPI; install manually:
  #   pip install git+https://github.com/int-brain-lab/paper-brain-wide-map.git
  "ONE-api>=2.0",
]
all = [
  "pandas>=1.3",
  "mcp>=0.9.0",
  "boto3>=1.28.0",
  "uvicorn>=0.20",
  "starlette>=0.27",
  # poor-man-gplvm is not on PyPI; install manually for [gplvm] extra
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "jaxopt>=0.8.2",
  "optax>=0.2.2",
  "scikit-learn>=1.0",
  "umap-learn>=0.5.0",
  "networkx>=2.6",
  "python-louvain>=0.16",
  "neo>=0.12.0",
  "quantities>=0.14.0",
  "pynwb>=2.0.0",
  "numba>=0.56",
  "spikeinterface>=0.104.0",
  "natsort>=8.0",
  "six>=1.16",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "Jinja2>=3.1.0",
  "kubernetes>=30.1.0",
  # brainwidemap is not on PyPI; install manually for [ibl] extra
  "ONE-api>=2.0",
]

[project.scripts]
spikelab-batch-jobs = "spikelab.batch_jobs.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '(\.git|\.venv|build|dist)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: async test (requires pytest-asyncio)",
]
filterwarnings = [
    "ignore::DeprecationWarning:quantities",
    "ignore:numpy.core is deprecated:DeprecationWarning",
    "ignore:__array_wrap__ must accept context:DeprecationWarning",
]

# Version ranges SpikeLab is tested against. Used by
# guards/_preflight.py:_check_spikeinterface_version and
# _check_kilosort4_host. Keep in sync with the dependency pins
# above; bumping a pin should be paired with bumping the upper
# bound here.
[tool.spikelab.tested_versions]
spikeinterface = ["0.100.0", "0.110.0"]
kilosort4 = ["4.0.0", "5.0.0"]


